temporary fix to bottom nav, sets overflow hidden to important

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -306,7 +306,7 @@ h6 {
       bottom: 0;
       height: 115px;
       width: 100%;
-      overflow:hidden;
+      overflow:hidden !important;
     }
 
     main {
